--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-hot-toast": "^2.4.1",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "6.22.2",
     "typescript": "5.2.2"
   },
