--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,10 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
+    "framework": "vite",
+    "functions": {
+      "api/twilio/*.ts": {
+        "memory": 128,
+        "maxDuration": 10
+      }
+    }
   }
