--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "0.344.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-easy-crop": "^5.4.1",
     "react-fast-marquee": "^1.6.4",
     "react-hot-toast": "^2.4.1",
     "react-phone-number-input": "^3.4.12",
