--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
     "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
-    "framework": "vite",
-    "functions": {
-      "api/twilio/*.ts": {
-        "memory": 128,
-        "maxDuration": 10
-      }
-    }
+    "framework": "vite"
   }
