--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emailjs/browser": "^4.4.1",
     "@supabase/supabase-js": "2.39.7",
     "@vercel/node": "^5.1.15",
+    "gsap": "^3.13.0",
     "lucide-react": "0.344.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
