--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-easy-crop": "^5.4.1",
     "react-fast-marquee": "^1.6.4",
     "react-hot-toast": "^2.4.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "6.22.2",
     "twilio": "^5.5.2",
